[iOS] Handle nil in GridTransitionLayout setSelectedItem:

In some cases, there may be no visible items in a grid, so the selected
item will be nil, which is never a member of any collection. This CL
updates the DCHECK condition in [GridTransitionLayout setSelectedItem:]
to not trigger in this case.

Bug: 822912
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I845355feee5f4af1d3443ff3d362aae45c05d9c9
Reviewed-on: https://chromium-review.googlesource.com/973121
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544687}