ios/chrome/browser/ui/tab_grid/transitions/grid_transition_layout.mm
@@ -30,7 +30,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 }
 
 - (void)setSelectedItem:(GridTransitionLayoutItem*)selectedItem {
-  DCHECK([self.items containsObject:selectedItem]);
+  DCHECK(!selectedItem || [self.items containsObject:selectedItem]);
   _selectedItem = selectedItem;
 }
 
